force-app/main/default/objects/Reward__c/Reward__c.object-meta.xml
<CustomObject>
    <description>Customers are able to earn and redeem rewards based on their points</description>
    <label>Reward</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Reward Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>