force-app/main/default/objects/Reward__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default value is &quot;TRUE&quot;</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>