force-app/main/default/objects/Reward__c/fields/AdjustmentDate__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Pre-populated with TODAY&apos;S date but editable by user</description>
    <label>Adjustment Date</label>
    <type>Date</type>
</CustomField>