force-app/main/default/objects/Reward__c/fields/AwardDate__c.field-meta.xml
<CustomField>
    <fullName>AwardDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Pre-populated with TODAY&apos;S date but editable by user.</description>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>