force-app/main/default/objects/Reward__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.ParentContact__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>