force-app/main/default/objects/Reward__c/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Out For Delivery</fullName>
            </value>
            <value>
                <fullName>Cancelled Before Delivery</fullName>
            </value>
            <value>
                <fullName>Cancelled Upon Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>