force-app/main/default/objects/Reward__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <formula>IF(Contact__r.Market__c != &apos;&apos;, 
ADDMONTHS(IF(MONTH(IF(RecordType.DeveloperName = &apos;Earn&apos;, AwardDate__c, IF(RecordType.DeveloperName = &apos;Adjust_Add&apos;, AdjustmentDate__c, null))) = 12, DATE(YEAR(IF(RecordType.DeveloperName = &apos;Earn&apos;, AwardDate__c, IF(RecordType.DeveloperName = &apos;Adjust_Add&apos;, AdjustmentDate__c, null))), 12, 31 ), DATE(YEAR(IF(RecordType.DeveloperName = &apos;Earn&apos;, AwardDate__c, IF(RecordType.DeveloperName = &apos;Adjust_Add&apos;, AdjustmentDate__c, null))), MONTH(IF(RecordType.DeveloperName = &apos;Earn&apos;, AwardDate__c, IF(RecordType.DeveloperName = &apos;Adjust_Add&apos;, AdjustmentDate__c, null))) + 1, 1) - 1), 
IF(Contact__r.Market__c = &quot;MY&quot;, $CustomMetadata.AffiliateMetadata__mdt.MY.RewardPointsValidPeriod__c, 
IF(Contact__r.Market__c = &quot;PH&quot;, $CustomMetadata.AffiliateMetadata__mdt.PH.RewardPointsValidPeriod__c, 
IF(Contact__r.Market__c = &quot;SG&quot;, $CustomMetadata.AffiliateMetadata__mdt.SG.RewardPointsValidPeriod__c, 
IF(Contact__r.Market__c = &quot;TH&quot;, $CustomMetadata.AffiliateMetadata__mdt.TH.RewardPointsValidPeriod__c, 
IF(Contact__r.Market__c = &quot;VN&quot;, $CustomMetadata.AffiliateMetadata__mdt.VN.RewardPointsValidPeriod__c, 0)))))), 
null 
)</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>