force-app/main/default/objects/Reward__c/fields/isVoid__c.field-meta.xml
<CustomField>
    <fullName>isVoid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void</label>
    <type>Checkbox</type>
</CustomField>