force-app/main/default/objects/Reward__c/fields/PointsAmount__c.field-meta.xml
<CustomField>
    <fullName>PointsAmount__c</fullName>
    <label>Points Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>