force-app/main/default/objects/Reward__c/fields/PointsAmountView__c.field-meta.xml
<CustomField>
    <fullName>PointsAmountView__c</fullName>
    <formula>if (RecordType.Name == &apos;Redeem&apos;,  TotalPointsAmount__c ,   
if (RecordType.Name == &apos;Adjust (Add)&apos; || RecordType.Name == &apos;Earn&apos;,  PointsAmount__c +  Consumed__c , 
PointsAmount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>