force-app/main/default/objects/Reward__c/fields/ProductForRedemption__c.field-meta.xml
<CustomField>
    <fullName>ProductForRedemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filter lookup to show only Product records where &quot;Available for Reward Redemption&quot; checkbox is TRUE</description>
    <label>Product for Redemption</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND ((3 OR 4) OR (5 AND 6))</booleanFilter>
        <filterItems>
            <field>Product2.AvailableForRewardRedemption__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>equals</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>notEqual</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>contains</operation>
            <valueField>Product2.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>