force-app/main/default/objects/Reward__c/fields/RedemptionDate__c.field-meta.xml
<CustomField>
    <fullName>RedemptionDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Pre-populated with TODAY&apos;S date but editable by user</description>
    <label>Redemption Date</label>
    <type>Date</type>
</CustomField>