force-app/main/default/objects/Reward__c/fields/TotalPointsAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsAmount__c</fullName>
    <formula>IF( Quantity__c == 0 , PointsAmount__c *  1, PointsAmount__c *  Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>