force-app/main/default/objects/Reward__c/recordTypes/Adjust_Add.recordType-meta.xml
<RecordType>
    <fullName>Adjust_Add</fullName>
    <active>true</active>
    <label>Adjust (Add)</label>
</RecordType>