force-app/main/default/objects/Reward__c/recordTypes/Adjust_Subtract.recordType-meta.xml
<RecordType>
    <fullName>Adjust_Subtract</fullName>
    <active>true</active>
    <label>Adjust (Subtract)</label>
</RecordType>