force-app/main/default/objects/Reward__c/recordTypes/Earn.recordType-meta.xml
<RecordType>
    <fullName>Earn</fullName>
    <active>true</active>
    <label>Earn</label>
</RecordType>