force-app/main/default/objects/Reward__c/recordTypes/Redeem.recordType-meta.xml
<RecordType>
    <fullName>Redeem</fullName>
    <active>true</active>
    <label>Redeem</label>
</RecordType>