force-app/main/default/objects/Reward__c/validationRules/Adjustment_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Adjustment_Date_is_Required</fullName>
    <active>true</active>
    <description>Adjustment Date is Required for Adjust (Add) and Adjust (Subtract) record types</description>
    <errorConditionFormula>IF( 
AND(OR(RecordType.DeveloperName == &apos;Adjust_Add&apos;, RecordType.DeveloperName == &apos;Adjust_Subtract&apos;), ISNULL( AdjustmentDate__c)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>AdjustmentDate__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>