force-app/main/default/objects/Reward__c/validationRules/Award_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Award_Date_is_Required</fullName>
    <active>true</active>
    <description>Award Date is required for Earn record type.</description>
    <errorConditionFormula>IF( 
AND(RecordType.DeveloperName == &apos;Earn&apos;, ISNULL(AwardDate__c)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>AwardDate__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>