force-app/main/default/objects/Reward__c/validationRules/Cannot_Update_Voided_Redemption.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Voided_Redemption</fullName>
    <active>true</active>
    <errorConditionFormula>AND( isVoid__c ,
 OR(ISCHANGED( Quantity__c ), ISCHANGED( ProductForRedemption__c )  )
)</errorConditionFormula>
    <errorMessage>Unable to save record - Redemption is already voided.</errorMessage>
</ValidationRule>