force-app/main/default/objects/Reward__c/validationRules/Cannot_Void_Redemption.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Void_Redemption</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISNEW() ,
 isVoid__c 
)</errorConditionFormula>
    <errorMessage>Redemption cant be voided upon creation.</errorMessage>
</ValidationRule>