force-app/main/default/objects/Reward__c/validationRules/Delivery_Address_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Address_is_Required</fullName>
    <active>false</active>
    <description>Delivery Address is only mandatory for MY</description>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Redeem&quot;,
$UserRole.Name = &quot;ANI - Malaysia&quot;,
OR(
ISBLANK(DeliveryAddress__c)))</errorConditionFormula>
    <errorDisplayField>DeliveryAddress__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>