force-app/main/default/objects/Reward__c/validationRules/Delivery_Status_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Status_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(RecordType.DeveloperName == &apos;Redeem&apos;,  ISPICKVAL(DeliveryStatus__c, &apos;&apos;)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>DeliveryStatus__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>