force-app/main/default/objects/Reward__c/validationRules/Insufficient_Points_Based_on_Reward_Pts.validationRule-meta.xml
<ValidationRule>
    <fullName>Insufficient_Points_Based_on_Reward_Pts</fullName>
    <active>true</active>
    <description>Points Amount should be less than the related Contact&apos;s Reward Points</description>
    <errorConditionFormula>IF(AND(ISNEW(), RecordType.DeveloperName == &apos;Redeem&apos;,
PointsAmount__c &gt; Contact__r.RewardPoints__c),
TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Unable to save record - Insufficient points on Contact&apos;s Reward Points Balance</errorMessage>
</ValidationRule>