force-app/main/default/objects/Reward__c/validationRules/Points_Amount_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Points_Amount_is_Required</fullName>
    <active>true</active>
    <description>Points Amount is required for Earn, Adjust (Add) and Adjust (Subtract) record types.</description>
    <errorConditionFormula>IF( 
AND(RecordType.DeveloperName != &apos;Redeem&apos;, ISNULL(  PointsAmount__c)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>PointsAmount__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>