force-app/main/default/objects/Reward__c/validationRules/Product_for_Redemption_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_for_Redemption_is_Required</fullName>
    <active>true</active>
    <description>Product for Redemption is Required for Redeem record type</description>
    <errorConditionFormula>IF(AND(RecordType.DeveloperName == &apos;Redeem&apos;, ProductForRedemption__c == null), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>ProductForRedemption__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>