force-app/main/default/objects/Reward__c/validationRules/Quantity_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND((RecordType.DeveloperName == &apos;Redeem&apos;), ISNULL(Quantity__c)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>