force-app/main/default/objects/Reward__c/validationRules/Redemption_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Redemption_Date_is_Required</fullName>
    <active>true</active>
    <description>Redemption Date is Required for Redeem record type</description>
    <errorConditionFormula>IF( 
AND(RecordType.DeveloperName == &apos;Redeem&apos;, ISNULL(RedemptionDate__c )), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>RedemptionDate__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>