force-app/main/default/objects/Reward__c/validationRules/Remarks_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED(isVoid__c ) , isVoid__c ,
 ISBLANK( Remarks__c ) 
)</errorConditionFormula>
    <errorDisplayField>Remarks__c</errorDisplayField>
    <errorMessage>Reason is required when voiding a redemption.</errorMessage>
</ValidationRule>